--- a/hm.tex
+++ b/hm.tex
@@ -2637,7 +2637,7 @@ As before we can define the constrained motion by minimizing the corresponding a
 
 \begin{exercise}
     Consider the lagrangian $L=\frac12 g_{ij}(q)\dot q^i \dot q^j$ on the tangent bundle of a riemannian manifold $Q$ with a metric $\d s^2 = g_{ij}(q)\d q^i \d q^j$.
-    Show that the solutions $q=q(t)$ of the Euler-Lagrange equations for $L$ satisfy $(\dot q, \dot q)= \mathrm{const}$.
+    Show that the solutions $q=q(t)$ of the Euler-Lagrange equations for $L$ satisfy $\langle\dot q, \dot q\rangle= \mathrm{const}$.
 \end{exercise}
 
 \begin{exercise}[Clairaut's relation]
