--- a/hm.tex
+++ b/hm.tex
@@ -1081,9 +1081,9 @@ Note that Theorem~\ref{thm:ham1} applies to Example~\ref{ex:sprPen}.
 \end{itemize}
 \end{example}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
     \centering
-    \includegraphics[width=.7\linewidth]{images/pendulum.pdf}
+    \includegraphics[width=.7\linewidth]{images/potential-curves-pendulum.pdf}
     \caption{Integral curves for the pendulum}
     \label{fig:pendulum}
 \end{figure}
@@ -1301,6 +1301,13 @@ See also \cite[Chapter 2.4]{book:arnold}, especially Figures 10, 11 and 12.
 
     This is an example of a more general phenomenon that we will discuss soon in details.
 \end{example}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=.7\linewidth]{images/potential-curves.pdf}
+    \caption{Integral curves for a generic potential, showing a mix of bounded and unbounded motions.}
+    \label{fig:potential-curves}
+\end{figure}
 
 Before concluding this chapter let's discuss a final example where we can make use of non cartesian generalized coordinates.
 
