--- a/hm.tex
+++ b/hm.tex
@@ -3872,7 +3872,7 @@ and skew-symmetric means that the matrix $\Omega(x)$ is antisymmetric, so
     \begin{equation}
         \d\omega = 0,
     \end{equation}
-    and non--degenerate, which in coordinates means
+    and non--degenerate, $\omega \neq 0$, which in coordinates means
     \begin{equation}
         \det (\Omega(x)) \neq 0 \quad \forall x\in P.
     \end{equation}
