Slight text improvement
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -4117,7 +4117,9 @@ It is then worth asking ourselves what happens if we consider the tautological o
 \end{proof}
 
 The function $S$ appearing in \eqref{eq:Sfungen} is called \emph{generating function} of the symplectic transformation.
-Equation \eqref{eq:Sfungen} is telling us that canonical transformations can be identified with a generating function: we will study this phenomenon and its consequences in more details once we start discussing integrable systems.
+The name stems from the fact that we can effectively use $S$ to construct canonical transformations and effectively compute the corresponding transformed positions or momentums.
+Put slightly differently, equation \eqref{eq:Sfungen} is telling us that canonical transformations can be identified with a generating function.
+We will leave it as a vague remark for the time being but we will come back to it, and study its consequences, in more details once we start discussing integrable systems.
 For now, lets keep drawing parallels between the Possion bracket and the symplectic formalism.
 
 We have shown in Theorem~\ref{thm:vf-infsym} that the hamiltonian flow is an infinitesimal symmetry of the Poisson bracket, which in particular means that it defines a one--parameter group of canonical transformations.
