--- a/hm.tex
+++ b/hm.tex
@@ -4445,8 +4445,8 @@ with the requirement that the $n\times2n$ matrix $\left(\frac{\partial q^i}{\par
 \begin{theorem}\label{thm:charbrals}
     The submanifold $\Lambda$ is lagrangian if and only if the following equations are satisfied:
     \begin{equation}\label{eq:charbrals}
-        \sum_{k,l=1}^n \left(\frac{\partial p_i}{\partial u^k}\frac{\partial q^i}{\partial u^l} - \frac{\partial p_i}{\partial u^l}\frac{\partial q^i}{\partial u^k} \right) = 0,
-        \quad i=1,\ldots,n
+        \left(\frac{\partial p_i}{\partial u^k}\frac{\partial q^i}{\partial u^l} - \frac{\partial p_i}{\partial u^l}\frac{\partial q^i}{\partial u^k} \right) = 0,
+        \quad k,l=1,\ldots,n
     \end{equation}
 \end{theorem}
 \begin{proof}
